<resources>
    <string name="app_name">Honeydew</string>
    <string name="action_settings">Settings</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="save_task">Save</string>
    <string name="cancel_task">Cancel</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="task_description_hint">Add Task Description here.</string>
    <string name="task_name_hint">Add Task here.</string>
    <string name="add_item_title">Add Task</string>
</resources>
